--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,9 @@ quartus_project/*.rpt
 quartus_project/*.sof
 quartus_project/*.done
 quartus_project/*.qws
+quartus_project/*.cdf
 quartus_project/db
+quartus_project/greybox_tmp
 quartus_project/incremental_db
+quartus_project/.qsys_edit
+*.bak
